--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,47 @@
     transform: rotate(360deg);
   }
 }
+
+.header-container {
+  display: flex;
+  justify-content: space-between;
+  background-image: url('./assets/filmstrip.jpg');
+  background-size: contain;
+  height: 20vh;
+}
+
+.header-placeholder {
+  width: 6rem;
+  color: #90cea1;
+}
+
+.header-title {
+  font-family: Century;
+  font-weight: bolder;
+  font-size: 3rem;
+  text-shadow: 2px 2px 4px black;
+  width: 30rem;
+  line-height: 20vh;
+}
+
+.header-logo-box {
+  height: 8vh;
+  padding: 6vh 0 0 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.header-logo-title {
+  font-size: 0.75rem;
+  text-align: center;
+  height: 1.8vh;
+}
+
+.header-logo-item {
+  background-color: #153A93;
+}
+
+.header-logo {
+  width: 3rem;
+}
