--- a/src/App.css
+++ b/src/App.css
@@ -110,6 +110,40 @@ body {
   background-color: #90cea1;
 }
 
-.results {
-  line-height: 1;
+.results-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  line-height: 1.25rem;
+}
+
+.results-box {
+  width: 20rem;
+  height: 8rem;
+  display: flex;
+  padding: 10px;
+  background-color:#e5e6e9;
+  border: 4px solid black;
+}
+
+.results-title-and-date {
+  text-align: left;
+  margin: 0 0 0 1rem;
+}
+
+.results-title {
+  font-size: 1.5rem;
+  font-family: Century;
+  font-weight: bolder;
+  padding: 0 0 0.5rem 0;
+}
+
+.results-date {
+  font-weight: bold;
+}
+
+.no-results, .results-found {
+  font-size: 2rem;
+  font-family: Century;
+  font-weight: bolder;
 }
