--- a/src/App.css
+++ b/src/App.css
@@ -110,11 +110,30 @@ body {
   background-color: #90cea1;
 }
 
-.results-container {
+.pages-found {
+  line-height: 1rem;
+  padding: 0.25rem 0;
+  font-weight: bold;
+}
+
+.results-container, .pages-container {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   line-height: 1.25rem;
+}
+
+.pages-box {
+  padding: 0 0.5rem 0.5rem 0.5rem;
+}
+
+.pages-link {
+  text-decoration: none;
+  color:#153A93;
+}
+
+.pages-link:hover {
+  color: #ffff00;
 }
 
 .results-box {
