--- a/src/App.css
+++ b/src/App.css
@@ -110,30 +110,11 @@ body {
   background-color: #90cea1;
 }
 
-.pages-found {
-  line-height: 1rem;
-  padding: 0.25rem 0;
-  font-weight: bold;
-}
-
-.results-container, .pages-container {
+.results-container {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   line-height: 1.25rem;
-}
-
-.pages-box {
-  padding: 0 0.5rem 0.5rem 0.5rem;
-}
-
-.pages-link {
-  text-decoration: none;
-  color:#153A93;
-}
-
-.pages-link:hover {
-  color: #ffff00;
 }
 
 .results-box {
@@ -161,8 +142,20 @@ body {
   font-weight: bold;
 }
 
+.results-overview {
+  font-size: 0.75rem;
+}
+
 .no-results, .results-found, .welcome-message {
   font-size: 2rem;
   font-family: Century;
   font-weight: bolder;
+  line-height: 2.5rem;
+  padding: 0;
+  height: 3rem;
+}
+
+.results-found-warning {
+  line-height: 0;
+  height: 2rem;
 }
